--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,16 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48474743-2"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-48474743-2');
+        </script>
+
         <!-- css/js file location -->
         {% capture lvl %}{{ page.url | append:'index.html' | split:'/' | size }}{% endcapture %}
         {% capture relative %}{% for i in (3..lvl) %}../{% endfor %}{% endcapture %}
@@ -31,16 +41,6 @@
 
         <script src="/js/jquery-1.11.3.min.js"></script>
         <script src="/js/toc.js"></script>
-
-        <script>
-            var _hmt = _hmt || [];
-            (function() {
-              var hm = document.createElement("script");
-              hm.src = "//hm.baidu.com/hm.js?43b745f45c37f16276ef435cc5c7de8f";
-              var s = document.getElementsByTagName("script")[0];
-              s.parentNode.insertBefore(hm, s);
-            })();
-        </script>
 
         <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
         </script>
