--- a/css/custom.css
+++ b/css/custom.css
@@ -2,7 +2,7 @@ html,
 body {
     height: 100%;
     /* background:url('../images/bg.jpg'); */
-    background-color: #002a35;
+    background-color: black;
     background-size: cover;
     /* The html and body elements cannot have any padding or margin. */
 }
