--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -30,7 +30,7 @@
                         <script>
                             $('.show-comments').on('click', function() {
                             $.ajaxSetup({cache:true});
-                            $.getScript('http://secfree.disqus.com/embed.js');
+                            $.getScript('https://secfree.disqus.com/embed.js');
                             $.ajaxSetup({cache:false});
                             $(this).remove();
                             });
